--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   hello_world:
-    runs-on: ubuntu-18.04
+    runs-on: windows-latest
     steps:
       - name: Echo the message
         run: |
